gac_sb/objects/AppCIRsubvention__c.object
<CustomObject>
    <description>APPLICATION CIR - Comprend les subventions, avances remboursables et remboursements d&apos;avances d&apos;une mission CIR</description>
    <fields>
        <fullName>CleUnique__c</fullName>
        <formula>CASESAFEID(RecordType.Id) + Matricule__c</formula>
        <label>Clé unique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_versement__c</fullName>
        <label>Date de versement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Département</label>
        <referenceTo>AppCIRdepartement__c</referenceTo>
        <relationshipName>Subventions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImportId__c</fullName>
        <label>Id d&apos;import</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matricule__c</fullName>
        <label>Matricule</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mission_CIR__c</fullName>
        <label>Mission CIR</label>
        <referenceTo>AppCIRmission__c</referenceTo>
        <relationshipName>Subventions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Montant_option1__c</fullName>
        <label>Montant option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_option2__c</fullName>
        <label>Montant option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_option3__c</fullName>
        <label>Montant option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nature__c</fullName>
        <label>Nature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organisme__c</fullName>
        <label>Organisme</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projet</label>
        <referenceTo>AppCIRprojet__c</referenceTo>
        <relationshipName>Subventions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salarie__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Uniquement pour les subventions, à choisir parmi les salariés de la mission</description>
        <label>Salarié</label>
        <referenceTo>AppCIRdepensePersonnel__c</referenceTo>
        <relationshipName>Subventions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>[OLD] Subvention et avance</label>
    <nameField>
        <displayFormat>subvention-{00000000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subventions et avances</pluralLabel>
    <recordTypes>
        <fullName>avanceRemboursable</fullName>
        <active>true</active>
        <label>Avances remboursables</label>
    </recordTypes>
    <recordTypes>
        <fullName>remboursementAvance</fullName>
        <active>true</active>
        <label>Remboursements d&apos;avances</label>
    </recordTypes>
    <recordTypes>
        <fullName>subvention</fullName>
        <active>true</active>
        <label>Subventions</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>